# simple_online_trajectory_generator

./: .gitignore  CMakeLists.txt  README.md  Readme.md  package.xml
include/sotg/: blend_segment.hpp  constant_acceleration_solver.hpp  constant_acceleration_solver2.hpp  kinematic_solver.hpp  kinematic_solver2.hpp  linear_segment.hpp  logger.hpp  path.hpp  path2.hpp  path_manager.hpp  path_manager2.hpp  phase.hpp  phase2.hpp  point.hpp  point2.hpp  pose.hpp  result.hpp  section.hpp  section2.hpp  section_constraint.hpp  section_constraint2.hpp  segment.hpp  segment_constraint.hpp  sotg.hpp  symbol_group.hpp  trajectory_generator.hpp  trajectory_generator2.hpp  transform.hpp  utility_functions.hpp  value_group.hpp
include/termcolor/: termcolor.hpp
src/: blend_segment.cpp  constant_acceleration_solver.cpp  constant_acceleration_solver2.cpp  linear_segment.cpp  logger.cpp  path.cpp  path2.cpp  path_manager.cpp  path_manager2.cpp  point.cpp  point2.cpp  pose.cpp  section.cpp  section2.cpp  section_constraint.cpp  segment_constraint.cpp  symbol_group.cpp  trajectory_generator.cpp  trajectory_generator2.cpp  utility_functions.cpp  value_group.cpp
test/: sotg_test.cpp  sotg_test_manual.cpp  test.cpp  tests.json  trajectory_generator_unittest.cpp
tests/: test.cpp
